--- a/media-library/apps/ml-app/src/app/app.component.html
+++ b/media-library/apps/ml-app/src/app/app.component.html
@@ -3,11 +3,11 @@
     <ml-navbar>
       <ml-navbar-brand>My Brand</ml-navbar-brand>
       <ml-navbar-nav>
-        <ml-nav-item>Music</ml-nav-item>
-        <ml-nav-item>Podcasts</ml-nav-item>
-        <ml-nav-item>Television</ml-nav-item>
-        <ml-nav-item>Playlists</ml-nav-item>
-        <ml-nav-item>Player</ml-nav-item>
+        <ml-nav-item [routerLink]="'music'">Music</ml-nav-item>
+        <ml-nav-item [routerLink]="'podcast'">Podcasts</ml-nav-item>
+        <ml-nav-item [routerLink]="'television'">Television</ml-nav-item>
+        <ml-nav-item [routerLink]="'playlist'">Playlists</ml-nav-item>
+        <ml-nav-item [routerLink]="'player'">Player</ml-nav-item>
       </ml-navbar-nav>
       <ml-navbar-controls>
       </ml-navbar-controls>
