added search component

--- a/media-library/apps/ml-app/src/app/app.component.html
+++ b/media-library/apps/ml-app/src/app/app.component.html
@@ -10,6 +10,7 @@
         <ml-nav-item [routerLink]="'player'">Player</ml-nav-item>
       </ml-navbar-nav>
       <ml-navbar-controls>
+        <ml-search></ml-search>
       </ml-navbar-controls>
     </ml-navbar>
   </header>
