--- a/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
@@ -1,3 +1,6 @@
-<fa-icon *ngIf="faIcon" [icon]="faIcon" class="peer order-2 bg-inherit text-inherit"></fa-icon>
-<input class="order-1 w-0 peer-hover:w-[200px] rounded-full focus:px-[10px]  bg-inherit text-inherit
-  group-hover/search:w-[200px] transition-[width] focus:w-[200px] duration-[250ms] ease-linear" />
+<button class="peer order-2 bg-inherit text-inherit border-0 p-0 m-0" (click)="search(searchInput.value)">
+  <fa-icon *ngIf="faIcon" [icon]="faIcon"></fa-icon>
+</button>
+<input class="order-1 w-0 peer-hover:w-[200px] rounded-[15px] peer-hover:px-[10px] group-hover/search:px-[10px] focus:px-[10px] text-dark
+  group-hover/search:w-[200px] transition-[width] focus:w-[200px] duration-[250ms] ease-linear
+  border-dark border-1 outline-0" placeholder="Enter search..." #searchInput type="text" />
