--- a/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
@@ -1,6 +1,6 @@
-<button class="peer order-2 bg-inherit text-inherit border-0 p-0 m-0" (click)="search(searchInput.value)">
+<input class="w-0 rounded-[15px] data-[visible=true]:px-[10px] text-dark data-[visible=true]:w-[200px] 
+  transition-[width] duration-[250ms] ease-linear border-dark border-1 outline-0" 
+  placeholder="Enter text..." type="text" #txtSearch (focusout)="handleFocusOut($event)" (keypress)="handleKeyPress($event)" />
+<button class="bg-inherit text-inherit border-0 p-0 m-0 data-[hover=true]:text-info-300" (click)="handleSearch($event)" #btnSearch>
   <fa-icon *ngIf="faIcon" [icon]="faIcon"></fa-icon>
 </button>
-<input class="order-1 w-0 peer-hover:w-[200px] rounded-[15px] peer-hover:px-[10px] group-hover/search:px-[10px] focus:px-[10px] text-dark
-  group-hover/search:w-[200px] transition-[width] focus:w-[200px] duration-[250ms] ease-linear
-  border-dark border-1 outline-0" placeholder="Enter search..." #searchInput type="text" />
