--- a/media-library/apps/ml-app/src/app/app.component.html
+++ b/media-library/apps/ml-app/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="flex flex-col h-screen w-screen">
   <header>
     <ml-navbar>
-      <ml-navbar-brand>My Brand</ml-navbar-brand>
+      <ml-navbar-brand [routerLink]="'home'" [routerLinkActive]="'active'" class="cursor-pointer">My Brand</ml-navbar-brand>
       <ml-navbar-nav>
-        <ml-nav-item [routerLink]="'music'">Music</ml-nav-item>
-        <ml-nav-item [routerLink]="'podcast'">Podcasts</ml-nav-item>
-        <ml-nav-item [routerLink]="'television'">Television</ml-nav-item>
-        <ml-nav-item [routerLink]="'playlist'">Playlists</ml-nav-item>
-        <ml-nav-item [routerLink]="'player'">Player</ml-nav-item>
+        <ml-nav-item [routerLink]="'music'" [routerLinkActive]="'active'">Music</ml-nav-item>
+        <ml-nav-item [routerLink]="'podcast'" [routerLinkActive]="'active'">Podcasts</ml-nav-item>
+        <ml-nav-item [routerLink]="'television'" [routerLinkActive]="'active'">Television</ml-nav-item>
+        <ml-nav-item [routerLink]="'playlist'" [routerLinkActive]="'active'">Playlists</ml-nav-item>
+        <ml-nav-item [routerLink]="'player'" [routerLinkActive]="'active'">Player</ml-nav-item>
       </ml-navbar-nav>
       <ml-navbar-controls>
         <ml-search (search)="handleSearch($event)"></ml-search>
