--- a/media-library/apps/ml-app/src/app/app.component.html
+++ b/media-library/apps/ml-app/src/app/app.component.html
@@ -17,4 +17,5 @@
   </header>
   <main class="grow"><router-outlet></router-outlet></main>
   <footer class="flex items-center justify-center h-footer bg-light text-dark dark:bg-dark dark:text-light">&copy; {{year}} - Kendall O. Williams</footer>
+  <ml-loading></ml-loading>
 </div>
