theme toggle changes

--- a/media-library/apps/ml-app/src/app/app.component.html
+++ b/media-library/apps/ml-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-screen w-screen">
+<div class="flex flex-col h-screen w-screen font-sans">
   <header>
     <ml-navbar>
       <ml-navbar-brand [routerLink]="'home'" [routerLinkActive]="'active'" class="cursor-pointer">My Brand</ml-navbar-brand>
