--- a/media-library/libs/ml-ui/src/lib/navbar/navbar-menu/navbar-menu.component.html
+++ b/media-library/libs/ml-ui/src/lib/navbar/navbar-menu/navbar-menu.component.html
@@ -1,1 +1,2 @@
+<div class="flex justify-end p-[20px]"><ml-switch mlThemeToggle></ml-switch></div>
 <ng-content select="ml-navbar-nav"></ng-content>
