--- a/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
@@ -1,6 +1,8 @@
-<input class="w-0 rounded-[15px] data-[visible=true]:px-[10px] text-dark data-[visible=true]:w-[200px] 
-  transition-[width] duration-[250ms] ease-linear border-dark border-1 outline-0" 
-  placeholder="Enter text..." type="text" #txtSearch (focusout)="handleFocusOut($event)" (keypress)="handleKeyPress($event)" />
+<div class="flex justify-end w-[200px]">
+  <input class="w-0 rounded-[15px] data-[visible=true]:px-[10px] text-dark data-[visible=true]:w-full 
+    transition-[width] duration-[250ms] ease-linear border-dark border-1 outline-0" 
+    placeholder="Enter text..." type="text" #txtSearch (focusout)="handleFocusOut($event)" (keypress)="handleKeyPress($event)" />
+</div>
 <button class="bg-inherit text-inherit border-0 p-0 m-0 data-[hover=true]:text-info" (click)="handleSearch($event)" #btnSearch>
   <fa-icon *ngIf="faIcon" [icon]="faIcon"></fa-icon>
 </button>
