--- a/media-library/apps/ml-app/src/app/app-navbar/app-navbar.component.html
+++ b/media-library/apps/ml-app/src/app/app-navbar/app-navbar.component.html
@@ -1,6 +1,6 @@
 <ml-navbar>
   <nav class="flex items-stretch px-[20px] gap-[20px] h-full bg-inherit text-inherit">
-    <ml-navbar-brand [routerLink]="'home'" [routerLinkActive]="'active'" class="cursor-pointer">My Brand</ml-navbar-brand>
+    <ml-navbar-brand [routerLink]="'home'" [routerLinkActive]="'active'" class="cursor-pointer whitespace-nowrap">My Brand</ml-navbar-brand>
     <div class="grow overflow-hidden">
       <ml-navbar-nav *ngIf="!isMobile" mlAutoHideNavbarLinks [ngClass]="{ 'hidden': navHidden$ | async }">
         <ml-nav-item [routerLink]="'music'" [routerLinkActive]="'active'">Music</ml-nav-item>
