--- a/media-library/libs/ml-ui/src/lib/modal/modal-header/modal-header.component.html
+++ b/media-library/libs/ml-ui/src/lib/modal/modal-header/modal-header.component.html
@@ -1,4 +1,1 @@
-<div class="flex">
-  <ng-content select="ml-modal-title"></ng-content>
-  <div>TODO - add X (close)</div>
-</div>
+<ng-content></ng-content>
