--- a/media-library/libs/ml-ui/src/lib/modal/modal.component.html
+++ b/media-library/libs/ml-ui/src/lib/modal/modal.component.html
@@ -1,5 +1,3 @@
-<dialog #mlDialog>
-  <ng-content select="ml-modal-header"></ng-content>
-  <ng-content select="ml-modal-body"></ng-content>
-  <ng-content select="ml-modal-footer"></ng-content>
+<dialog #mlDialog (close)="handleClose($event)">
+  <ng-content></ng-content>
 </dialog>
