--- a/media-library/libs/ml-ui/src/lib/controls/card/card.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/card/card.component.html
@@ -1,3 +1,1 @@
-<ng-content select="ml-card-header"></ng-content>
-<ng-content select="ml-card-body"></ng-content>
-<ng-content select="ml-card-footer"></ng-content>
+<ng-content></ng-content>
