--- a/media-library/apps/ml-app/src/app/app-music/app-music.component.html
+++ b/media-library/apps/ml-app/src/app/app-music/app-music.component.html
@@ -1,33 +1,35 @@
-<div class="p-[5px]">Albums</div>
-<div class="flex gap-[20px] overflow-auto p-[5px]">
-  <ml-card *ngFor="let album of albums$ | async">
-    <ml-card-header>
-      <ml-card-title>{{album.title}} <button mlButton (click)="expandAlbum(album.id)">Expand</button></ml-card-title>
-      <ml-card-subtitle>
-        <ng-container *ngIf="artists$ | async as artists">
-          {{getArtist(artists, album.artistId)?.name}}
-        </ng-container>
-      </ml-card-subtitle>
-    </ml-card-header>
-    <ml-card-body></ml-card-body>
-    <ml-card-footer></ml-card-footer>
-  </ml-card>
-</div>
-<div class="p-[5px]">Artists</div>
-<div class="flex gap-[20px] overflow-auto p-[5px]">
-  <ml-card *ngFor="let artist of artists$ | async">
-    <ml-card-header>
-      <ml-card-title>{{artist.name}}</ml-card-title>
-      <ml-card-subtitle>
-        <ng-container *ngIf="artists$ | async as artists">
-          <div *ngFor="let album of getAlbumByArtistId(artist.id)">{{album.title}}</div>
-        </ng-container>
-      </ml-card-subtitle>
-    </ml-card-header>
-    <ml-card-body></ml-card-body>
-    <ml-card-footer></ml-card-footer>
-  </ml-card>
-</div>
+<ng-container *ngIf="(isLoading$ | async) === false">
+  <div class="p-[5px]">Albums</div>
+  <div class="flex gap-[20px] overflow-auto p-[5px]">
+    <ml-card *ngFor="let album of albums$ | async">
+      <ml-card-header>
+        <ml-card-title>{{album.title}} <button mlButton (click)="expandAlbum(album.id)"><fa-icon *ngIf="expandIcon" [icon]="expandIcon"></fa-icon></button></ml-card-title>
+        <ml-card-subtitle>
+          <ng-container *ngIf="artists$ | async as artists">
+            {{getArtist(artists, album.artistId)?.name}}
+          </ng-container>
+        </ml-card-subtitle>
+      </ml-card-header>
+      <ml-card-body></ml-card-body>
+      <ml-card-footer></ml-card-footer>
+    </ml-card>
+  </div>
+  <div class="p-[5px]">Artists</div>
+  <div class="flex gap-[20px] overflow-auto p-[5px]">
+    <ml-card *ngFor="let artist of artists$ | async">
+      <ml-card-header>
+        <ml-card-title>{{artist.name}} <button mlButton (click)="expandArtist(artist.id)">Expand</button></ml-card-title>
+        <ml-card-subtitle>
+          <ng-container *ngIf="artists$ | async as artists">
+            <div *ngFor="let album of getAlbumByArtistId(artist.id)">{{album.title}}</div>
+          </ng-container>
+        </ml-card-subtitle>
+      </ml-card-header>
+      <ml-card-body></ml-card-body>
+      <ml-card-footer></ml-card-footer>
+    </ml-card>
+  </div>
+</ng-container>
 <ml-modal #musicModal>
   <ml-modal-header>
     <ng-container [ngSwitch]="selectedItemType$ | async">
