--- a/media-library/apps/ml-app/src/app/app-music/app-artist/app-artist.component.html
+++ b/media-library/apps/ml-app/src/app/app-music/app-artist/app-artist.component.html
@@ -1,1 +1,9 @@
-<p>app-artist works!</p>
+<ml-card>
+  <ml-card-header>
+    <ml-card-title>{{artist?.name}}</ml-card-title>
+    <ml-card-subtitle></ml-card-subtitle>
+  </ml-card-header>
+  <ml-card-body>
+  </ml-card-body>
+  <ml-card-footer></ml-card-footer>
+</ml-card>
