--- a/media-library/apps/ml-app/src/app/app-music/app-music.component.html
+++ b/media-library/apps/ml-app/src/app/app-music/app-music.component.html
@@ -18,7 +18,7 @@
   <div class="flex gap-[20px] overflow-auto p-[5px]">
     <ml-card *ngFor="let artist of artists$ | async">
       <ml-card-header>
-        <ml-card-title>{{artist.name}} <button mlButton (click)="expandArtist(artist.id)">Expand</button></ml-card-title>
+        <ml-card-title>{{artist.name}} <button mlButton (click)="expandArtist(artist.id)"><fa-icon *ngIf="expandIcon" [icon]="expandIcon"></fa-icon></button></ml-card-title>
         <ml-card-subtitle>
           <ng-container *ngIf="artists$ | async as artists">
             <div *ngFor="let album of getAlbumByArtistId(artist.id)">{{album.title}}</div>
@@ -31,15 +31,7 @@
   </div>
 </ng-container>
 <ml-modal #musicModal>
-  <ml-modal-header>
-    <ng-container [ngSwitch]="selectedItemType$ | async">
-      <div *ngSwitchCase="musicTabsEnum.Albums">Albums</div>
-      <div *ngSwitchCase="musicTabsEnum.Artists">Artists</div>
-      <div *ngSwitchCase="musicTabsEnum.Songs">Songs</div>
-      <div *ngSwitchDefault>Something went wrong!</div>
-      <button mlButton (click)="closeModal()">Close</button>
-    </ng-container>
-  </ml-modal-header>
+  <ml-modal-header></ml-modal-header>
   <ml-modal-body>
     <ng-container [ngSwitch]="selectedItemType$ | async">
       <app-album *ngSwitchCase="musicTabsEnum.Albums" [album]="selectedAlbum$ | async"></app-album>
