--- a/media-library/apps/ml-app/src/app/app-settings/app-settings.component.html
+++ b/media-library/apps/ml-app/src/app/app-settings/app-settings.component.html
@@ -2,10 +2,10 @@
   <div class="flex flex-col gap-[5px] w-[200px] mt-[10px] ml-[10px]">
     <label>Option</label>
     <ml-select [placeholder]="'Select an option...'" formControlName="option" [valueComparer]="valueComparer"
-      (selectionChange)="handleChange($event)">
+      (selectedItemChange)="handleChange($event)">
       <ml-select-option [value]="'A'">Option A</ml-select-option>
       <ml-select-option [value]="'B'">Option B</ml-select-option>
-      <ml-select-option [value]="{test: 1}">Option C</ml-select-option>
+      <ml-select-option [value]="'C'">Option C</ml-select-option>
     </ml-select>
   </div>
   <br />
